--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"This is a full functional api\"",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "\"Prasanna\"",
   "license": "ISC",
